page content & UI updated ✅

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header section  -->
     <div class="header-section two-section">
         <div class="two-part two-part-img">
-            <img src="../images/banner/banner1.png" alt="">
+            <img src="./images/banner/banner1.png" alt="">
         </div>
         <div class="two-part header-contact">
             <div class="header-title"> 
@@ -35,7 +35,7 @@
         <!-- info section  -->
         <div class="two-section info-section">
             <div class="two-part info-img-section">
-                <img src="../images/person.png" alt="" width="100px">
+                <img src="./images/person.png" alt="" width="100px">
             </div>
             <div class="two-part info-part">
                 <div class="header-title">
@@ -59,22 +59,22 @@
             <h2 class="plan-title">My Plans</h2>
             <div class="plan-details">
                 <div class="single-plan">
-                    <img src="../images/icons/web.png" alt="">
+                    <img src="./images/icons/web.png" alt="">
                     <h3>Web Development</h3>
                     <h4>I want to start</h4>
                 </div>
                 <div class="single-plan">
-                    <img src="../images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h3>Javascript</h3>
                     <h4>I want to start</h4>
                 </div>
                 <div class="single-plan">
-                    <img src="../images/icons/smoke.png" alt="">
+                    <img src="./images/icons/smoke.png" alt="">
                     <h3>Smoking Habit</h3>
                     <h4>I want to start</h4>
                 </div>
                 <div class="single-plan">
-                    <img src="../images/icons/ecom.png" alt="">
+                    <img src="./images/icons/ecom.png" alt="">
                     <h3>ecommerce</h3>
                     <h4>I want to start</h4>
                 </div>
@@ -97,9 +97,9 @@
             form, by injected humour, or randomised words</p>
             <p>Email : info@gmail.com</p>
             <p>Phone : 01500 00 00 00</p>
-            <img src="../images/icons/fb.png" alt="" width="50px" height="50px">
-            <img src="../images/icons/twitter.png" alt="" width="50px" height="50px">
-            <img src="../images/icons/youtube.png" alt="" width="50px" height="50px">
+            <img src="./images/icons/fb.png" alt="" width="50px" height="50px">
+            <img src="./images/icons/twitter.png" alt="" width="50px" height="50px">
+            <img src="./images/icons/youtube.png" alt="" width="50px" height="50px">
         </div>
         <div class="two-part">
             <h3>Subscribe</h3>
